# camelforth-rp2040-aU

./: .gitignore  AUTHORS  README.md
0-Distrib.d/: md5sum-samd21.txt  md5sums.txt
0-Distrib.d/CamelForth/: md5sum.txt  uri.txt
0-Distrib.d/CamelForth/src/: ansitest.txt  forth.c  forth.h  linuxio.c  readme.txt  tivaio.inc
17-camelforth-a.d/_pico-sdk_/: c0ffee
17-camelforth-a.d/doc/: bug_notes.txt  cap.txt  cf_picocom.sh  dictionary-a.dump  dot_s_fs.txt  ndot_s.fs  quickvocab.fs
17-camelforth-a.d/pico-examples/: CMakeLists.txt
17-camelforth-a.d/pico-examples/camelforth-a/: CMakeLists.txt  camelforth-a.c  status.txt
17-camelforth-a.d/pico-examples/camelforth-a/forth/: CMakeLists.txt  dump.inc  flash.inc  forth.c  forth.c__LOCALS_  forth.h  imports.txt  rp2040_flash_ops.inc  rp2040_flash_ops_feather.inc_  rp2040_flashkey.inc  rp2040_pico.inc  rp2040_pico_getkey_usb.inc  rp2040_pico_getkey_usb.inc_redacted_  rp2040_reading.inc  rp2040_reflash.inc  rp2040_runtime.inc
17-camelforth-a.d/pico-examples/camelforth-a/pico-hw/: CMakeLists.txt
17-camelforth-a.d/pico-examples/camelforth-a/pico-hw/pico-LED/: CMakeLists.txt  pico-LED.c
doc/: PICO_SDK_PATH.txt  THEORY.of.operation.txt  all_vocab.fs  buf2flash.txt  build_env.txt  current_environment.fs  dots_hf.fs  examine.fs  forth-with-source-code-on-device.txt  gpio.fs  mem_align.txt  mem_map_bounds.txt  results_debugging.txt  sample_run_25_feb_1354z.txt
pre-built-uf2.d/: .gitignore  camelforth-a.uf2  camelforth-a.uf2.md5.txt
pre-built-uf2.d/0-COPY_TO_RAM.d/: camelforth-a--27-feb-114444-51ee87d-copy_to_ram_mode.uf2  camelforth-a--27-feb-114444-51ee87d-copy_to_ram_mode.uf2.md5.txt  camelforth-a--27-feb-200150-acb0322-copy_to_ram_mode.uf2  camelforth-a--27-feb-200150-acb0322-copy_to_ram_mode.uf2.md5.txt  camelforth-a--27-feb-214827-acb0322-copy_to_ram_mode.uf2  camelforth-a--27-feb-214827-acb0322-copy_to_ram_mode.uf2.md5.txt  camelforth-a--27-feb-225001-9a678fc-copy_to_ram_mode.uf2  camelforth-a--27-feb-225001-9a678fc-copy_to_ram_mode.uf2.md5.txt  camelforth-a--27-feb-234507-b364c5d-copy_to_ram_mode.uf2  camelforth-a--27-feb-234507-b364c5d-copy_to_ram_mode.uf2.md5.txt
pre-built-uf2.d/0-NO_FLASH.d/: camelforth-a--27-feb-114444-51ee87d-no_flash_mode.uf2  camelforth-a--27-feb-114444-51ee87d-no_flash_mode.uf2.md5.txt  camelforth-a--27-feb-200150-acb0322-no_flash_mode.uf2  camelforth-a--27-feb-200150-acb0322-no_flash_mode.uf2.md5.txt  camelforth-a--27-feb-214827-acb0322-no_flash_mode.uf2  camelforth-a--27-feb-214827-acb0322-no_flash_mode.uf2.md5.txt  camelforth-a--27-feb-225001-9a678fc-no_flash_mode.uf2  camelforth-a--27-feb-225001-9a678fc-no_flash_mode.uf2.md5.txt  camelforth-a--27-feb-234507-b364c5d-no_flash_mode.uf2  camelforth-a--27-feb-234507-b364c5d-no_flash_mode.uf2.md5.txt
samd.d/: README.md
